# kosmos

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LANGUAGE_SERVERS.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  package.json
core/: Cargo.toml
core/src/: application.rs  editor_sessions.rs  events.rs  file_tree.rs  git.rs  lib.rs  settings.rs  state.rs  window.rs  workloads.rs  workspace_changes.rs
core/src/application/: editor_sessions.rs  mod.rs
core/src/formatters/: catalog.rs  installation.rs  manager.rs  mod.rs  process.rs
core/src/language_servers/: catalog.rs  edits.rs  installation.rs  manager.rs  mod.rs  runtime.rs  secure_edit.rs  workspace_edit_coordinator.rs
core/src/persistence/: mod.rs
core/src/state/: editor.rs  file_tree.rs  git.rs  mod.rs  search.rs  terminal.rs  tests.rs  tooling.rs  workspace.rs  workspace_edits.rs
core/src/tabs/: editor.rs  file_tree.rs  git.rs  mod.rs  search.rs  terminal.rs
core/src/tree/: mod.rs  panes.rs  tabs.rs  workspaces.rs
crates/app_shell/: Cargo.toml  README.md
crates/app_shell/src/: app.rs  delegates.rs  lib.rs
crates/app_shell/src/delegates/: header.rs  mod.rs  pane.rs  pane_tree_actions.rs  settings.rs  workspace.rs
crates/kosmos/: Cargo.toml  README.md
crates/kosmos/src/: app.rs  bottom_bar.rs  delegates.rs  main.rs
crates/persistence/: Cargo.toml  README.md
crates/persistence/src/: db.rs  lib.rs
crates/persistence/src/migrations/: 001_initial.sql  002_tab_path.sql  003_file_tree_expanded_dirs.sql
crates/syntax/: Cargo.toml  README.md
crates/syntax/src/: grammar.rs  highlight.rs  lib.rs  registry.rs  snapshot.rs  store.rs
crates/ui/: Cargo.toml  README.md
crates/ui/src/: delegate.rs  drag.rs  lib.rs  metrics.rs  pane_tree_actions.rs
crates/ui/src/components/: action_button.rs  button_label.rs  dropdown.rs  input.rs  mod.rs  modal.rs  multi_select.rs  numeric_input.rs  scrollbar.rs  switch.rs  toast.rs  tooltip.rs
crates/ui/src/layout/: bottom_bar.rs  header.rs  landing.rs  mod.rs
crates/ui/src/tabs/: diff.rs  infinity.rs  mod.rs  placeholder.rs
crates/ui/tests/: tsx_highlighter.rs  xml_highlighter.rs
desktop/: README.md  components.json  meson.build  package.json  tsconfig.json  vite.config.ts
desktop/scripts/: check-ipc.ts  generate-ipc.ts
desktop/src/: main.c
desktop/src/app/: kosmos_application.c  kosmos_application.h
desktop/src/ipc/: kosmos_ipc_client.c  kosmos_ipc_client.h  kosmos_ipc_file_tree.c  kosmos_ipc_pane.c  kosmos_ipc_protocol.c  kosmos_ipc_protocol.h  kosmos_ipc_tab.c  kosmos_ipc_workspace.c
desktop/src/main/: development-instance.ts  main.ts  server-client.ts  settings-snapshot.ts  shutdown-attempt.ts  startup.ts
desktop/src/main/ipc/: handlers.ts  request-result.ts
desktop/src/main/server/: client.ts  process.ts  recovery.ts
desktop/src/main/window/: main-window.ts  security.ts  shortcuts.ts
desktop/src/preload/: preload.ts  request-result.ts
desktop/src/renderer/: App.tsx  global.d.ts  index.css  index.html  main.tsx
desktop/src/renderer/components/: file-icon.tsx
desktop/src/renderer/ipc/: editor.ts  file-tree.ts  formatters.ts  git.ts  index.ts  language-servers.ts  pane.ts  search.ts  settings.ts  tab.ts  terminal.ts  transport.ts  workspace.ts
desktop/src/renderer/lib/: async-queue.ts  document-save-coordinator.ts  editor-buffers.ts  editor-git-decorations.ts  editor-input.ts  editor-settings.ts  errors.ts  file-tree-git-status.ts  file-tree-refresh.ts  formatter-state.ts  formatting-error-state.ts  git-status.ts  language-client-catalog.ts  language-client.ts  language-diagnostics.ts  language-feature-adapters.ts  language-server-state.ts  monaco.ts  queued-refresh.ts  request-generation.ts  terminal-keybindings.ts  workspace-edit-model-lineages.ts  workspace-edit-transaction.ts  workspace-snapshot.ts  workspace-trust-coordinator.ts  workspace-trust-retry.ts
desktop/src/renderer/stores/: formatter-store.ts  git-store.ts  index.ts  language-server-store.ts  settings-store.ts  workspace-store.ts  workspace-trust-store.ts
desktop/src/shared/ipc/: editor.ts  envelope.ts  file-tree.ts  formatters.ts  git.ts  ids.ts  index.ts  language-servers.ts  pane.ts  search.ts  settings.ts  tab.ts  terminal.ts  window.ts  workspace.ts
desktop/src/tabs/: kosmos_blank_tab.c  kosmos_blank_tab.h  kosmos_file_tree_tab.c  kosmos_file_tree_tab.h
desktop/src/ui/: kosmos_main_window.c  kosmos_main_window.h  kosmos_main_window_private.h  kosmos_pane_dnd.c  kosmos_pane_layout.c  kosmos_tabbed_pane.c  kosmos_workspace_switcher.c
desktop/tests/: development-instance.test.ts  document-lifecycle.test.ts  document-save-coordinator.test.ts  document-save-projection.test.ts  file-tree-git-status.test.ts  file-tree-refresh.test.ts  formatter-state.test.ts  formatting-error-state.test.ts  ipc-cancellation.test.ts  ipc-contract.test.ts  ipc-errors.test.ts  language-client-catalog.test.ts  language-diagnostics.test.ts  language-feature-adapters.test.ts  language-server-state.test.ts  language-server-trust.test.ts  queued-refresh.test.ts  request-generation.test.ts  server-recovery.test.ts  settings-projection.test.ts  shutdown-attempt.test.ts  startup.test.ts  terminal-keybindings.test.ts  window-security.test.ts  window-shortcuts.test.ts  workspace-edit-transaction.test.ts  workspace-snapshot.test.ts
desktop/tests/fixtures/ipc/: server-messages.json
scripts/: install.sh  (+8 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/kosmos-agent/: Cargo.toml
src-tauri/crates/kosmos-core/: Cargo.toml
src-tauri/crates/kosmos-protocol/: Cargo.toml
src-tauri/src/: ai.rs  lib.rs
src-tauri/src/git/: mod.rs
src-tauri/src/lsp/: mod.rs
src-tauri/src/plugins/: mod.rs
src-tauri/src/remote/: agent.rs  commands.rs  deploy.rs  mod.rs  router.rs  routing.rs
src-tauri/src/search/: mod.rs
src-tauri/src/settings/: ai.rs  mod.rs  theme.rs  types.rs
src-tauri/src/tabs/: editor.rs  file_tree.rs
src-tauri/src/terminal/: mod.rs
ui/: CMakeLists.txt
ui/src/: main.cpp
ui/src/ipc/: IpcClient.cpp  IpcClient.h
(+400 files in other folders)
