[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.4.4"
edition = "2024"
license = "MIT"

[workspace.dependencies]
gix = "0.82.0"
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit", "runtime_shaders", "wayland", "x11"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component", features = ["tree-sitter-languages"] }
icondata_core = "0.1"
icondata_vs = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }
