[package]
name = "core"
version = "0.5.3"
edition = "2024"

[dependencies]
flate2 = "1.1.9"
globset = "0.4.18"
ignore = "0.4.28"
libc = "0.2.186"
nix = { version = "0.30.1", features = ["signal", "process"] }
notify = "8.2.0"
percent-encoding = "2.3.2"
portable-pty = "0.9.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tar = "0.4.44"
ureq = { version = "3.3.0", default-features = false, features = ["rustls"] }
zbus = "=5.15.0"
