[workspace]
members = [".", "crates/kosmos-protocol", "crates/kosmos-core", "crates/kosmos-agent"]
resolver = "2"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[package]
name = "kosmos"
version = "0.3.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kosmos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-store = "2.4.2"
notify-debouncer-mini = "0.5"
notify = "7"
tokio = { version = "1", features = ["process", "io-util"] }
which = "7"
reqwest = "0.12"
zip = "2"
flate2 = "1"
tar = "0.4"
portable-pty = "0.9"
tauri-plugin-clipboard-manager = "2.3.2"
trash = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
kosmos-protocol = { path = "crates/kosmos-protocol" }
kosmos-core = { path = "crates/kosmos-core" }
ignore = "0.4"
png = "0.17"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"

[target.'cfg(any(target_os = "linux", target_os = "windows", target_os = "macos"))'.dependencies]
tauri-plugin-single-instance = "2"

