[package]
name = "kosmos"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { workspace = true }
icons = { path = "../icons" }
settings = { path = "../settings" }
ui = { path = "../ui" }
workspace = { path = "../workspace" }
pane_tree = { path = "../pane_tree" }
persistence = { path = "../persistence" }
shortcuts = { path = "../shortcuts" }
tabs = { path = "../tabs" }
theme = { path = "../theme" }
