[package]
name = "kosmos"
version = "1.0.0"
edition = "2024"

[dependencies]
file_tree = { path = "../file_tree" }
gpui = { workspace = true }
icons = { path = "../icons" }
settings = { path = "../settings" }
ui = { path = "../ui" }
workspace = { path = "../workspace" }
pane_tree = { path = "../pane_tree" }
persistence = { path = "../persistence" }
shortcuts = { path = "../shortcuts" }
tabs = { path = "../tabs" }
theme = { path = "../theme" }
zoom = { path = "../zoom" }
