[package]
name = "ui"
version = "0.4.1"
edition = "2024"

[dependencies]
file_editor = { path = "../file_editor" }
file_tree = { path = "../file_tree" }
gpui = { workspace = true }
gpui-component = { workspace = true }
highlight = { path = "../highlight" }
icons = { path = "../icons" }
installer = { path = "../installer" }
kosmos_git = { package = "git", path = "../git" }
language = { path = "../language" }
lsp = { path = "../lsp" }
registry = { path = "../registry" }
settings = { path = "../settings" }
shortcuts = { path = "../shortcuts" }
syntax = { path = "../syntax" }
theme = { path = "../theme" }
terminal = { path = "../terminal" }
unicode-segmentation = "1.12"
workspace = { path = "../workspace" }
pane_tree = { path = "../pane_tree" }
panes = { path = "../panes" }
pulldown-cmark = "0.13"
tabs = { path = "../tabs" }
