[package]
name = "ui"
version = "0.4.7"
edition = "2024"

[dependencies]
anyhow = "1"
file_editor = { path = "../file_editor" }
file_search = { path = "../file_search" }
file_tree = { path = "../file_tree" }
gpui = { workspace = true }
gpui-component = { workspace = true }
icons = { path = "../icons" }
installer = { path = "../installer" }
kosmos_git = { package = "git", path = "../git" }
language = { path = "../language" }
lsp = { path = "../lsp" }
lsp-types = "0.97"
registry = { path = "../registry" }
settings = { path = "../settings" }
shortcuts = { path = "../shortcuts" }
theme = { path = "../theme" }
terminal = { path = "../terminal" }
workspace = { path = "../workspace" }
pane_tree = { path = "../pane_tree" }
panes = { path = "../panes" }
tabs = { path = "../tabs" }
