[package]
name = "kosmos-agent"
version = "0.1.12"
edition = "2021"

[[bin]]
name = "kosmos-agent"
path = "src/main.rs"

[dependencies]
kosmos-protocol = { path = "../kosmos-protocol", features = ["async"] }
kosmos-core = { path = "../kosmos-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "7"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "net",
  "io-util",
  "io-std",
  "sync",
] }
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
