[package]
name = "kosmos-core"
version = "0.3.1"
edition = "2024"

[features]
default = ["installer"]
# The installer feature pulls in heavy deps (reqwest, zip, flate2, tar)
# needed for downloading/extracting LSP servers.
installer = ["dep:zip", "dep:flate2", "dep:tar"]
# Enable fff-search's Zig-compiled glob matcher. Required in CI; requires
# Zig on PATH at build time.
zlob = ["fff-search/zlob"]

[dependencies]
kosmos-protocol = { path = "../kosmos-protocol", features = ["async"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
thiserror = "2"
serde_json = "1"
notify-debouncer-mini = "0.5"
notify = "7"
ignore = "0.4"
regex = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "rt", "time", "fs", "macros"] }
which = "7"
portable-pty = "0.9"
trash = "5"
fff-search = "0.5"
nucleo-matcher = "0.3"

# Optional: only needed with "installer" feature
zip = { version = "2", optional = true, default-features = false, features = ["deflate"] }
flate2 = { version = "1", optional = true, default-features = false, features = ["rust_backend"] }
tar = { version = "0.4", optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }
